robot tävvendämine: [[hy:Ֆեմինիզմ]]

--- a/Feminism.mw
+++ b/Feminism.mw
@@ -30,7 +30,7 @@
 [[gd:Boireann-dhligheachas]]
 [[gl:Feminismo]]
 [[ko:여성주의]]
-[[hy:Իգապաշտպանություն]]
+[[hy:Ֆեմինիզմ]]
 [[hi:नारीवाद]]
 [[hr:Feminizam]]
 [[ia:Feminismo]]
