robot manopandminõ: [[so:Shimbir]]

--- a/Tsirk.mw
+++ b/Tsirk.mw
@@ -117,6 +117,7 @@ Mõnõq tsirgoq elässeq [[aastak]] läbi üten paigan, tõõsõq ([[rändäjä 
 [[sk:Vtáky]]
 [[sl:Ptiči]]
 [[szl:Ptoki]]
+[[so:Shimbir]]
 [[sr:Птице]]
 [[sh:Ptica]]
 [[fi:Linnut]]
