--- a/2005.mw
+++ b/2005.mw
@@ -41,6 +41,7 @@ Aastagaq: [[2001]] [[2002]] [[2003]] [[2004]] - '''2005''' - [[2006]] [[2007]] [
 [[bs:2005]]
 [[br:2005]]
 [[bg:2005]]
+[[bxr:2005]]
 [[ca:2005]]
 [[ceb:2005]]
 [[cv:2005]]
