*Empty MediaWiki Message*

--- a/Kunst.mw
+++ b/Kunst.mw
@@ -87,6 +87,7 @@ Kunsti ala kuulusõq muuhulgan [[kujotaja kunst]], [[tarbõkunst]], [[ehitüskun
 [[nn:Kunst]]
 [[mhr:Сымыктыш]]
 [[nds:Kunst]]
+[[pap:Arte]]
 [[pl:Sztuka]]
 [[pt:Arte]]
 [[ro:Artă]]
