--- a/Dekolonisiirmine.mw
+++ b/Dekolonisiirmine.mw
@@ -8,6 +8,7 @@ Kuigi dekolonisiirmise näütüisi om joba [[muistinõ aig|muistitsõst aost]], 
 [[ca:Descolonització]]
 [[cs:Dekolonizace]]
 [[de:Dekolonisation]]
+[[el:Αποαποικιοποίηση]]
 [[en:Decolonization]]
 [[es:Descolonización]]
 [[eu:Deskolonizazio]]
