--- a/Mendelssohni_Felix.mw
+++ b/Mendelssohni_Felix.mw
@@ -11,7 +11,7 @@
 <!--|rahvus=s'akslanõ-->
 |ammõt=viiesepp
 }}
-'''Mendelssohni Felix''' (Jakob Ludwig Felix Mendelssohn Bartholdy, 1809-1847) oll' [[S'aksamaa|s'aksa]] varajadsõ romantismiao viiesepp, [[klavõr]]imängjä ja dirigent. Tä sündü juudi prerekunnan, miä ildampa läts' üle lutõriusku; tä oll' [[filosoofia|filosoofi]] [[Mendelssohni Moses]]e latsõlats'. Tä lõi sümfoonijit, kontserte, oratooriummõ, klavõri- ja kambrõmuusikat. Peräst pikkä aigu 19. aastagasaa lõpon ja 20. aastagasaa alostusõn, ku tedä muutuja muusigamaitsõ ja antisemitismi peräst es hinnata, om timä loomingulist originaalsust jälq tunnustama ja väärtüstämä naat. S'oo ilma aigu om tä üts kõgõ populaarsõmp romantismiao viiesepp. 
+'''Mendelssohni Felix''' (Jakob Ludwig Felix Mendelssohn Bartholdy, 1809-1847) oll' [[S'aksamaa|s'aksa]] varahadsõ romantismiao viiesepp, [[klavvõr|klavõri]]mängjä ja dirigent. Tä sündü juudi perren, miä ildampa läts' üle lutõriusko; tä oll' [[filosoofia|filosoofi]] [[Mendelssohni Moses]]õ latsõlats'. Tä lõi sümfoonijit, kontsõrtõ, oratooriummõ, klavõri- ja kambrõmuusikat. Peräst pikkä aigu 19. aastagasaa lõpon ja 20. aastagasaa alostusõn, ku tedä muutuja muusigamaitsõ ja antisemitismi peräst es hinnataq, om timä loomingulist originaalsust jälq tunnistama ja väärtüstämä naat. S'oo ilma aigo om tä üts kõgõ populaarsõmp romantismiao viiesepp. 
 
 == Looming ==
 === Tähtsämbäq teossõq ===
