*Empty MediaWiki Message*

--- a/Maausk.mw
+++ b/Maausk.mw
@@ -18,6 +18,7 @@ Mõnikõrd om maausos kutsut ka tõisi rahvidõ luudususkõ. Eesti maausolisõq 
 *[http://www.maavald.ee Maavalla Kua (maausoliisi ütisüse) võrgoleht]
 *[http://www.suri.ee/etnofutu/4/omausk.html Ahto Kaasik, "Omausust omailmas"]
 
+[[katõgooria:maausk]]
 [[katõgooria:usk]]
 
 [[de:Maausk]]
