*Empty MediaWiki Message*

--- a/Sirvikallendri.mw
+++ b/Sirvikallendri.mw
@@ -1,4 +1,4 @@
-'''Sirvikallendri''' (Maavalla kallendri, sirvilavvaq, sirviq) om [[kallendri]], midä tarvitasõq eesti maausolidsõq. Aoarvamisõ alostusõs om võet nn. [[Billingeni katastruuf]], mink toimumisõ aig om [[Roodsi]]n viirsavi meetodi perrä aastagalidsõ täpsüsega kimmäs tett. Kallendri kuunimeq, pühäq ja tähtpääväq nink kuusaisõ kõrd om perit õnnõ maarahva perimüsest. Pühhi–tähtpäivi valigu puhul om põhilidsõlt jääd noidõ mano, mink maausolinõ tähendüs ja kumbõq ommaq teedäq. Erändis ommaq [[tõnnipäiv]] ([[7. joulukuu päiv]]) ja [[kollõtamispäiv]] ([[14. rehekuu päiv]]), mink kotsilõ olõ-i määntsitki kumbit teedäq. 
+'''Sirvikallendri''' (Maavalla kallendri, sirvilavvaq, sirviq) om [[kallendri]], midä tarvitasõq [[eesti]] [[maausk|maausolidsõq]]. Aoarvamisõ alostusõs om võet nn. [[Billingeni katastruuf]], mink toimumisõ aig om [[Roodsi]]n viirsavi meetodi perrä aastagalidsõ täpsüsega kimmäs tett. Kallendri kuunimeq, pühäq ja tähtpääväq nink kuusaisõ kõrd om perit õnnõ maarahva perimüsest. Pühhi–tähtpäivi valigu puhul om põhilidsõlt jääd noidõ mano, mink maausolinõ tähendüs ja kumbõq ommaq teedäq. Erändis ommaq [[tõnnipäiv]] ([[7. joulukuu päiv]]) ja [[kollõtamispäiv]] ([[14. rehekuu päiv]]), mink kotsilõ olõ-i määntsitki kumbit teedäq. 
 
 [[Aastak|Aastaga]] jagamisõl om alossõs võet harilik kallendri 12 [[kuu (aomõõt)|kuu]] ja 7–päävälidse [[nätäl|nädäliga]]. Kuiõ nimeq ommaq võeduq maakiili murdist. Maakeelitsit kuunimmi om pall'o ja esiq paigon ommaq nääq esiqsugudsõq. Näütüses süäkuus om nimitet nii aastaga edimäst ku tõist kuud. Sirvikallendrin om vällä pakut õnnõ üts võimalik valik maakeelitsit kuunimmi.
 
@@ -23,6 +23,7 @@ Sirvikallendrit and parhilla vällä [[Maavalla Koda]].
 ==Kaeq viil==
 *[[Kallendri]]
 *[[Eesti rahvakallendri]]
+*[[Maausk]]
 
 ==Välislink==
 *[http://www.maavald.ee/maausk.html?op=rubriik&rubriik=21 Sirvikallendriq] Maavalla Kua kodolehe pääl
