*Empty MediaWiki Message*

--- a/Maausk.mw
+++ b/Maausk.mw
@@ -13,6 +13,9 @@ Mõnikõrd om maausos kutsut ka tõisi rahvidõ luudususkõ. Eesti maausolisõq 
 *[[Barkalaja Anzori]]
 
 
+== Kaeq viil == 
+*[[Sirvikallendri]]
+
 == Välislinke ==
 
 *[http://www.maavald.ee Maavalla Kua (maausoliisi ütisüse) võrgoleht]
