--- a/Ütidse_S'aksamaa_luuminõ.mw
+++ b/Ütidse_S'aksamaa_luuminõ.mw
@@ -24,6 +24,7 @@
 [[ko:독일의 통일]]
 [[hr:Ujedinjenje Njemačke]]
 [[is:Stofnun Þýskalands]]
+[[it:Unificazione della Germania]]
 [[he:איחוד גרמניה (המאה ה-19)]]
 [[lv:Vācijas apvienošana]]
 [[hu:Németország egyesítése]]
