*Empty MediaWiki Message*

--- a/Mõõk.mw
+++ b/Mõõk.mw
@@ -17,4 +17,76 @@ Viil võit mõõk parhillaki ollaq sõaväe [[ohvitsiir]]el. Säänest ohvitsiir
 
 [[Katõgooria:Sõariistaq]]
 
+[[ang:Sƿeord]]
+[[ar:سيف]]
+[[an:Espata]]
+[[arc:ܣܝܦܐ (ܙܝܢܐ)]]
+[[ast:Espada]]
+[[az:Qılınc]]
+[[be:Меч]]
+[[bs:Mač]]
+[[br:Kleze]]
+[[bg:Меч]]
+[[ca:Espasa]]
+[[cs:Meč]]
+[[cy:Cleddyf]]
+[[da:Sværd]]
+[[de:Schwert]]
+[[et:Mõõk]]
+[[el:Ξίφος]]
 [[en:Sword]]
+[[es:Espada]]
+[[eo:Glavo]]
+[[eu:Ezpata]]
+[[fa:شمشیر]]
+[[fr:Épée]]
+[[gd:Claidheamh]]
+[[gl:Espada]]
+[[gan:劍]]
+[[ko:검]]
+[[hr:Mač]]
+[[io:Glavo]]
+[[io:Espado]]
+[[id:Pedang]]
+[[is:Sverð]]
+[[it:Spada]]
+[[he:חרב]]
+[[sw:Upanga]]
+[[kv:Шыпурт]]
+[[la:Gladius]]
+[[lv:Zobens]]
+[[lt:Kalavijas]]
+[[jbo:cladakyxa'i]]
+[[hu:Kard]]
+[[ml:വാൾ]]
+[[ms:Pedang]]
+[[nl:Zwaard (wapen)]]
+[[ja:剣]]
+[[no:Sverd]]
+[[nn:Sverd]]
+[[pl:Miecz]]
+[[pt:Espada]]
+[[ro:Spadă]]
+[[qu:Khillaychuki]]
+[[ru:Меч]]
+[[sah:Кылыс]]
+[[sco:Swuird]]
+[[simple:Sword]]
+[[sk:Meč]]
+[[sl:Meč]]
+[[sr:Мач]]
+[[sh:Mač]]
+[[fi:Miekka]]
+[[sv:Svärd]]
+[[tl:Tabak]]
+[[ta:வாள்]]
+[[te:ఖడ్గం]]
+[[th:ดาบ]]
+[[tr:Kılıç (silah)]]
+[[uk:Меч]]
+[[ur:تلوار]]
+[[vi:Kiếm]]
+[[war:Espada]]
+[[zh-yue:劍]]
+[[bat-smg:Kalavėjs]]
+[[zh:劍]]
