--- a/Mõõk.mw
+++ b/Mõõk.mw
@@ -11,7 +11,7 @@ Setomaa saajakombin võit mõõga asõmal ollaq [[tsootska]] vai druuska kepp.
 ==Ohvitsiirimõõk==
 [[Pilt:M1850 Staff and Field Officer's Sword Reproduction.JPG|thumb|left|Ameeriga Ütisriige sõaväe ohvitsiiri mõõk aastagast 1850.]]
 
-Viil võit mõõk parhillaki ollaq sõaväe [[ohvitsiir]]el. Säänest ohvitsiirimõõka pruugitas inämbäste [[paraad]]il vai mõnõ muu tähtsä sõaväekombõ pidämise jaos. Viimäte pruuksevaq suurõtüküväe ohvitsiiriq, kinkal oll vaia suurtõtükke jaost maad paljast raoda. 
+Viil võit mõõk parhillaki ollaq sõaväe [[ohvitsiir]]el. Säänest ohvitsiirimõõka pruugitas inämbäste [[paraad]]il vai mõnõ muu tähtsä sõaväekombõ pidämise jaos. Peris sõah pruuksevaq mõõko viimäte suurõtüküväe ohvitsiiriq, kinkal oll vaia suurtõtükke jaost maad paljast raoda. 
 
 {{commons|swords}}
 
