--- a/23._piimäkuu_päiv.mw
+++ b/23._piimäkuu_päiv.mw
@@ -174,6 +174,7 @@
 [[wa:23 d' djun]]
 [[vls:23 juni]]
 [[war:Hunyo 23]]
+[[yi:23סטן יוני]]
 [[yo:23 June]]
 [[zh-yue:6月23號]]
 [[bat-smg:Bėrželė 23]]
