--- a/25._piimäkuu_päiv.mw
+++ b/25._piimäkuu_päiv.mw
@@ -174,6 +174,7 @@
 [[wa:25 di djun]]
 [[vls:25 juni]]
 [[war:Hunyo 25]]
+[[yi:25סטן יוני]]
 [[yo:25 June]]
 [[zh-yue:6月25號]]
 [[bat-smg:Bėrželė 25]]
