--- a/Soomõ.mw
+++ b/Soomõ.mw
@@ -9,7 +9,7 @@ Riigikiil'=[[soomõ kiil]], [[roodsi kiil]]|
 Pääliin=[[Helsinki]]|
 Riigitüübi pää=President'|
 Riigipää=[[Tarja Halonen]]|
-Pääministri=[[Matti Vanhanen]]|
+Pääministri=[[Mari Kiviniemi]]|
 Suurus=338 145|
 Suurusõ perrä=63|
 Vett=9,4%|
