*Empty MediaWiki Message*

--- a/Istanbul.mw
+++ b/Istanbul.mw
@@ -9,7 +9,7 @@
  | kaardiallkiri = Kon Istanbul Türgün om
  }}
 
-'''Istanbul''' (innembide viil '''Byzantion''' ja '''Konstantinoopli''') om [[Türgü]] kõgõ suurõmb liin ja maailma suurusõ poolõst neläs liin.
+'''Istanbul''' (innembide viil '''Byzantion''' ja '''Konstantinopolis''') om [[Türgü]] kõgõ suurõmb liin ja maailma suurusõ poolõst neläs liin.
 
 [[Katõgooria:Pääliinaq]]
 [[Katõgooria:Türgü liinaq]]
