*Empty MediaWiki Message*

--- a/Inemiseõigusõq.mw
+++ b/Inemiseõigusõq.mw
@@ -1,5 +1,9 @@
 '''Inemiseõigusõq''' ommaq [[inemine|inemise]] sünnüperätseq õigusõq ja vabahusõq, miä sõltu-iq timä rassist, [[sugu|suust]] egaq usotunnistusõst. Inemiseõigusõq ommaq löüdnüq riikevaihõlist tunnustust [[Inemiseõiguisi ülddeklarats'uun|Inemiseõiguisi ülddeklarats'oonin]], minka [[Ütidseq Riigiq]] võtiq vasta aastagal 1948.
 
+== Välislingiq ==
+* [http://www.amnesty.org/ Amnesty International]
+* [http://hroniki.info/ Inemiseõigusõq - Vinnemaa]
+
 [[Katõgooria:Õigustiidüs]]
 
 [[af:Menseregte]]
