*Empty MediaWiki Message*

--- a/Mõõk.mw
+++ b/Mõõk.mw
@@ -4,14 +4,14 @@
 
 ==Saajamõõk==
 
-Mõõko pruugitas vana moodu perrä viil [[maarahvas|maarahva]] [[saajaq|saajakombin]]. Kõgõ tähtsämb kommõq om, et [[mõrsja]] tulõ är ravvutada vai piirata niimoodu, et [[saajavanõmb]], [[peigmiis]] ni [[peiopoiss]] lüüväq mõrsja ümbre käien timä pää kotsil mõõgaq kokko. Saajamõõgaq ommaq innembide olnu peris vanaaolidseq mõõgaq, [[tsaariaig|tsaariaolidseq]] vinne sõaväe mõõgaq vai puust tettüq mõõgaq. 
+Mõõko pruugitas vana moodu perrä viil [[maarahvas|maarahva]] [[saajaq|saajakombin]]. Kõgõ tähtsämb kommõq om, et [[mõrsja]] tulõ är ravvutaq vai piiradaq niimuudu, et [[saajavanõmb]], [[peigmiis]] ni [[peiopoiss]] lööväq mõrsja ümbre kävven timä pää kotsil mõõgaq kokko. Saajamõõgaq ommaq innembide olnuq peris vanaaolidsõq mõõgaq, [[tsaariaig|tsaariaolidsõq]] vinne sõaväe mõõgaq vai puust tettüq mõõgaq. 
 
-Setomaa saajakombin võit mõõga asõmal ollaq [[tsootska]] vai druuska kepp.
+Setomaa saajakombin või mõõga asõmal ollaq [[tsootska]] vai truuska kepp.
 
-==Ohvitsiirimõõk==
-[[Pilt:M1850 Staff and Field Officer's Sword Reproduction.JPG|thumb|left|Ameeriga Ütisriige sõaväe ohvitsiiri mõõk aastagast 1850.]]
+==Ohvitseerimõõk==
+[[Pilt:M1850 Staff and Field Officer's Sword Reproduction.JPG|thumb|left|Ameeriga Ütisriike sõaväe ohvitseeri mõõk aastagast 1850.]]
 
-Viil võit mõõk parhillaki ollaq sõaväe [[ohvitsiir]]el. Säänest ohvitsiirimõõka pruugitas inämbäste [[paraad]]il vai mõnõ muu tähtsä sõaväekombõ pidämise jaos. Peris sõah pruuksevaq mõõko viimäte suurõtüküväe ohvitsiiriq, kinkal oll vaia suurtõtükke jaost maad paljast raoda. 
+Viil või mõõk parhillaki ollaq sõaväe [[ohvitsiir|ohvitseerel]]. Säänest ohvitseerimõõka pruugitas inämbäste [[paraad]]il vai mõnõ muu tähtsä sõaväekombõ pidämise jaos. Peris sõah pruugõq mõõko viimäte suurõtüküväe ohvitseeriq, kel oll' vaia suuritükke jaos maad paljas rakoq. 
 
 {{commons|swords}}
 
