--- a/Mozarti_Wolfgang_Amadeus.mw
+++ b/Mozarti_Wolfgang_Amadeus.mw
@@ -62,7 +62,7 @@ Pariisi-reisil luud töiest tunnõtumbaq ommaq klavõrisonaat A-mollist (1778) j
 
 === 1781: Viini minek ===
 
-1781. a. vahtsõaastakuun kannõti Mozarti oopõr ''"Idomeneo"'' Münchenin ette "märkmisväärse edoga" (New Grove). Urbõkuun kutsuti Wolfgang Viini, kon timä tüüandja Salzburgi prints-pääpiiskop Colloredo võtt' ossa imperaatri Joseph II ammõtihe pühitsemise pidostuisist. Mozart, kiä oll' Münchenin kittüst maitsa saanuq, süändü ärq, ku Colloredo kohõl' tedä ku tiinjät ja esiqeränis ku pääpiiskop kiild' täl mängi imperaatrilõ krahvinna Thuni puul (taso iist, miä olnuq puul timä Salzburgi aastagapalgast). Lehekuun läts' tülü viil suurõmbas: Mozart taht' ammõdi maaha pandaq, a täl lasta-s. Tõsõl kuul luba sõski anti, a väega jällel kombõl, põhimõttõlidsõlt panti tälle jalaga persse. Vaihhõpääl oll' Mozart tähele pandnu, et Viinin ommaq võimalusõq häste ärq elläq ja tä tund', et piässi sinnäq elämä asotama ja vabakutsõlisõs nakkama.
+1781. a. vahtsõaastakuun kannõti Mozarti oopõr ''"Idomeneo"'' Münchenin ette "märkmisväärse edoga" (New Grove). Urbõkuun kutsuti Wolfgang Viini, kon timä tüüandja Salzburgi prints-pääpiiskop Colloredo võtt' ossa imperaatri Joseph II ammõtihe pühitsemise pidostuisist. Mozart, kiä oll' Münchenin kittüst maitsa saanuq, süändü ärq, ku Colloredo kohõl' tedä ku tiinjät ja esiqeränis ku pääpiiskop kiild' täl mängi imperaatrilõ krahvinna Thuni puul (taso iist, miä olnuq puul timä Salzburgi aastagapalgast). Lehekuun läts' tülü viil suurõmbas: Mozart taht' ammõdi maaha pandaq, a täl lasta-s. Tõsõl kuul luba sõski anti, a väega jällel kombõl. Vaihhõpääl oll' Mozart tähele pandnu, et Viinin ommaq võimalusõq häste ärq elläq ja tä tund', et piässi sinnäq elämä asotama ja vabakutsõlisõs nakkama.
 
 Tülü pääpiiskopiga oll' Mozarti jaos halusamp viil tuuperäst, et timä esä hoit' piiskopi poolõ. Esä vaiht' Wolfgangiga kirjo, kon kuts' tedä üles tüüandjaga ärq lepmä. Wolfgang kaits' kirglidselt umma plaani Viinin ütsindä karjääri tetäq. Vaiõlus lõppi, ku Wolfgang tetti vallalõ. Tuu tähtsä samm muut' timä elokäüki pall'o.
 
