*Empty MediaWiki Message*

--- a/Tsehhi_kiil.mw
+++ b/Tsehhi_kiil.mw
@@ -1,4 +1,16 @@
-Tsehhi kiil (tsehhi keelen ''čeština'') om üts õdaguslaavi keelist. Taad kõnõlõs ku imäkiilt 12 mill'ona inemise ümbre päämädselt [[Tsehhi]]n.
+{{Kiil
+| nimi  = Tsehhi kiil (''čeština'')
+| kon kõnõldas  = [[Tsehhi]]n
+| kõnõlõjidõ arv  = 12 mill'onat
+| kon om ammõtlinõ = [[Tsehhi]]n
+| kiilkund = indoõuruupa
+| keelerühmäq = slaavi<br />õdaguslaavi
+| iso1  = cs
+| iso2  = ces
+| iso3  = ces
+}}
+
+'''Tsehhi kiil''' (tsehhi keelen ''čeština'') om üts õdaguslaavi keelist. Taad kõnõlõs ku imäkiilt 12 mill'ona inemise ümbre päämädselt [[Tsehhi]]n.
 
 Tsehhi kiil om väega lähkü slovaki keelele. Inämbüs täüskasunuid tsehhe ja slovakkõ saavaq tõõnõtõõsõ keelest kergehe arvo. Ka poola kiil om tsehhi keelele lähkü, a siski kavvõmb ku slovaki kiil.
 
