*Empty MediaWiki Message*

--- a/Tsehhi_kiil.mw
+++ b/Tsehhi_kiil.mw
@@ -12,6 +12,6 @@
 
 '''Tsehhi kiil''' (tsehhi keelen ''čeština'') om üts õdaguslaavi keelist. Taad kõnõlõs ku imäkiilt 12 mill'ona inemise ümbre päämädselt [[Tsehhi]]n.
 
-Tsehhi kiil om väega lähkü slovaki keelele. Inämbüs täüskasunuid tsehhe ja slovakkõ saavaq tõõnõtõõsõ keelest kergehe arvo. Ka poola kiil om tsehhi keelele lähkü, a siski kavvõmb ku slovaki kiil.
+Tsehhi kiil om väega lähkü [[slovaki kiil|slovaki keelele]]. Inämbüs täüskasunuid tsehhe ja slovakkõ saavaq tõõnõtõõsõ keelest kergehe arvo. Ka [[poola kiil]] om tsehhi keelele lähkü, a siski kavvõmb ku slovaki kiil.
 
 [[katõgooria:keeleq]]
