*Empty MediaWiki Message*

--- a/Tsehhi_kiil.mw
+++ b/Tsehhi_kiil.mw
@@ -15,3 +15,4 @@
 Tsehhi kiil om väega lähkü [[slovaki kiil|slovaki keelele]]. Inämbüs täüskasunuid tsehhe ja slovakkõ saavaq tõõnõtõõsõ keelest kergehe arvo. Ka [[poola kiil]] om tsehhi keelele lähkü, a siski kavvõmb ku slovaki kiil.
 
 [[katõgooria:keeleq]]
+[[katõgooria:Tsehhi]]
