*Empty MediaWiki Message*

--- a/Tsehhi_kiil.mw
+++ b/Tsehhi_kiil.mw
@@ -16,3 +16,5 @@ Tsehhi kiil om väega lähkü [[slovaki kiil|slovaki keelele]]. Inämbüs täüs
 
 [[katõgooria:keeleq]]
 [[katõgooria:Tsehhi]]
+
+[[en:Czech language]]
