robot manopandminõ: [[br:Voroeg]]

--- a/Võro_kiil.mw
+++ b/Võro_kiil.mw
@@ -68,6 +68,7 @@ Võro tähistü: А B C D E F G H I J K L M N O P Q R S Š T U V W Õ Ä Ö Ü X
 [[af:Võro]]
 [[als:Võro]]
 [[am:ቮሮኛ]]
+[[br:Voroeg]]
 [[bg:Въро]]
 [[ca:Võro]]
 [[cs:Võruština]]
