*Empty MediaWiki Message*

--- a/Krišna.mw
+++ b/Krišna.mw
@@ -2,6 +2,12 @@
 
 '''Krišna''' om [[jumalus]], kedä kumardõdas pall'odõn [[hinduism]]i harodõn. Ku pall'o višnuistiq pidäväq tedä Višnu avataaras, sõs [[krišnaism]]in om tä pääjummal. 
 
+
+<gallery>
+File:KrishnaConsciousnessSpiritualandmaterialWorlds.jpg|Click to enlarge
+</gallery>
+
+
 [[Katõgooria:Hinduism]]
 
 [[af:Krisjna]]
