*Empty MediaWiki Message*

--- a/Düreri_Albrecht.mw
+++ b/Düreri_Albrecht.mw
@@ -1,5 +1,5 @@
 {{Elokäük
-|pilt= BritaAndI Selfportrait.jpg
+|pilt= Durer self portarit 28.jpg
 |pildiallkiri=''Albrecht Dürer''
 |nimi=Carl Larsson
 |sünnüaig=[[21. lehekuu päiv]] [[1471]]
