*Empty MediaWiki Message*

--- a/Düreri_Albrecht.mw
+++ b/Düreri_Albrecht.mw
@@ -3,7 +3,7 @@
 |pildiallkiri=''Albrecht Dürer''
 |nimi=Carl Larsson
 |sünnüaig=[[21. lehekuu päiv]] [[1471]]
-|sünnüpaik=[[Stockholm]]
+|sünnüpaik=[[Nuremberg]]
 |kuulmisaig=[[6. mahlakuu päiv]] [[1528]]
 <!--|matmispaik=-->
 |ammõt=kunstnik
