*Empty MediaWiki Message*

--- a/Düreri_Albrecht.mw
+++ b/Düreri_Albrecht.mw
@@ -1,6 +1,6 @@
 {{Elokäük
 |pilt= Durer self portarit 28.jpg
-|pildiallkiri=''Albrecht Dürer''
+|pildiallkiri=''Düreri Albrecht''
 |nimi=Carl Larsson
 |sünnüaig=[[21. lehekuu päiv]] [[1471]]
 |sünnüpaik=[[Nuremberg]]
@@ -8,7 +8,7 @@
 <!--|matmispaik=-->
 |ammõt=kunstnik
 }}
-'''Albrecht Dürer''' (''Albrecht Dürer'', 1471-1528) oll' [[S'aksamaa|s'aksa]] kunstnik.
+'''Düreri Albrecht''' (''Albrecht Dürer'', 1471-1528) oll' [[S'aksamaa|s'aksa]] kunstnik.
 
 == Pilte ==
 
