--- a/Düreri_Albrecht.mw
+++ b/Düreri_Albrecht.mw
@@ -13,7 +13,7 @@
 == Pilte ==
 
 <gallery>
-Image:Albrecht Dürer 081.jpg |''Johannes Kleberger'' (1526)
+Image:Albrecht Dürer 081.jpg |''Klebergeri Johannes'' (1526)
 Image:Albrecht Dürer 047.jpg |''Karl Suur'' (1512)
 Image:Albrecht Dürer 084b.jpg |''Maximilan I'' (1519)
 </gallery>
