*Empty MediaWiki Message*

--- a/Düreri_Albrecht.mw
+++ b/Düreri_Albrecht.mw
@@ -18,7 +18,7 @@ Image:Albrecht Dürer 047.jpg |''Karl Suur'' (1512)
 Image:Albrecht Dürer 084b.jpg |''Maximilan I'' (1519)
 </gallery>
 
-[[Katõgooria:S'aksamaai inemiseq|Dürer]]
+[[Katõgooria:S'aksamaa inemiseq|Dürer]]
 [[Katõgooria:S'aksamaa kunstniguq|Dürer]]
 
 [[af:Albrecht Dürer]]
