*Empty MediaWiki Message*

--- a/Ho_Chi_Minh.mw
+++ b/Ho_Chi_Minh.mw
@@ -2,8 +2,8 @@
 |  nimi =Ho Chi Minh City
 <!--|  umakeeline_nimi_1 = | |-->
 |  pilt = [[Pilt:HCMC skyline at night.jpg|250px]]
-|  pildiallkiri = Tokio
-|  riik = Jaapan
+|  pildiallkiri = Ho Chi Minh City
+|  riik = Vietnam
 |  suurus = 2095
 |  elänikke = 7 190 000 (2009)
 |  lat_deg = 10
