*Empty MediaWiki Message*

--- a/Ho_Chi_Minh.mw
+++ b/Ho_Chi_Minh.mw
@@ -16,7 +16,7 @@
 |  kaardiallkiri = Kon Ho Chi Minh City Vietnamin om
 }}
 
-'''Ho Chi Minh City''' om [[Vietnami]] pääliin.
+'''Ho Chi Minh City''' om [[Vietnam]]i pääliin.
 
 [[Katõgooria:Pääliinaq]]
 [[Katõgooria:Vietnami liinaq]]
