*Empty MediaWiki Message*

--- a/Ho_Chi_Minh.mw
+++ b/Ho_Chi_Minh.mw
@@ -1,8 +1,8 @@
 {{liin
-|  nimi =Ho Chi Minh City
-<!--|  umakeeline_nimi_1 = | |-->
+|  nimi =Ho Chi Minh
+|  umakeeline_nimi_1 = Thành phố Hồ Chí Minh
 |  pilt = [[Pilt:HCMC skyline at night.jpg|250px]]
-|  pildiallkiri = Ho Chi Minh City
+|  pildiallkiri = Ho Chi Minh
 |  riik = Vietnam
 |  suurus = 2095
 |  elänikke = 7 190 000 (2009)
@@ -16,7 +16,7 @@
 |  kaardiallkiri = Kon Ho Chi Minh City Vietnamin om
 }}
 
-'''Ho Chi Minh City''' om [[Vietnam]]i pääliin.
+'''Ho Chi Minh''' ([[vietnami kiil|vietnami keelen]] Thành phố Hồ Chí Minh) om suurusõ poolõst tõõnõ liin [[Vietnam]]in. Aastil ... oll' Ho Chi Minh Vietnami pääliin.
 
 [[Katõgooria:Pääliinaq]]
 [[Katõgooria:Vietnami liinaq]]
