*Empty MediaWiki Message*

--- a/Ho_Chi_Minh.mw
+++ b/Ho_Chi_Minh.mw
@@ -16,7 +16,10 @@
 |  kaardiallkiri = Kon Ho Chi Minh City Vietnamin om
 }}
 
-'''Ho Chi Minh''' ([[vietnami kiil|vietnami keelen]] Thành phố Hồ Chí Minh) om suurusõ poolõst tõõnõ liin [[Vietnam]]in. Aastil ... oll' Ho Chi Minh Vietnami pääliin.
+'''Ho Chi Minh''' ([[vietnami kiil|vietnami keelen]] Thành phố Hồ Chí Minh) om suurusõ poolõst tõõnõ liin [[Vietnam]]in. Liin om Lõunõ-Vietnamin Saigoni jõõ suun. Aastil 1954–1976 oll' Ho Chi Minh Lõunõ-Vietnami pääliin. 1975. aastagani oll' liina nimi Saigon (vietnami Sài Gòn). Uma parhilladsõ nime sai liin perän Vietnami sõta.
+
+Inne vietnamlaisi tulõkit 17. aastagasaal oll' Saigon väiku kalamiihikülä.
+
 
 [[Katõgooria:Pääliinaq]]
 [[Katõgooria:Vietnami liinaq]]
