*Empty MediaWiki Message*

--- a/Ho_Chi_Minh.mw
+++ b/Ho_Chi_Minh.mw
@@ -13,7 +13,7 @@
 |  lon_min = 46
 |  lon_ik = E
 |  kaardi_pilt = [[Pilt:LocationVietnamSaiGon.png|250px|]]
-|  kaardiallkiri = Kon Ho Chi Minh City Vietnamin om
+|  kaardiallkiri = Kon Ho Chi Minh Vietnamin om
 }}
 
 '''Ho Chi Minh''' ([[vietnami kiil|vietnami keelen]] Thành phố Hồ Chí Minh) om suurusõ poolõst tõõnõ liin [[Vietnam]]in. Liin om Lõunõ-Vietnamin Saigoni jõõ suun. Aastil 1954–1976 oll' Ho Chi Minh Lõunõ-Vietnami pääliin. 1975. aastagani oll' liina nimi Saigon (vietnami Sài Gòn). Uma parhilladsõ nime sai liin perän Vietnami sõta.
