*Empty MediaWiki Message*

--- a/Ho_Chi_Minh.mw
+++ b/Ho_Chi_Minh.mw
@@ -1,6 +1,6 @@
 {{liin
 |  nimi =Ho Chi Minh
-|  umakeeline_nimi_1 = Thành phố Hồ Chí Minh
+|  umakeeline_nimi = Thành phố Hồ Chí Minh
 |  pilt = [[Pilt:HCMC skyline at night.jpg|250px]]
 |  pildiallkiri = Ho Chi Minh
 |  riik = Vietnam
