robot manopandminõ: [[ar:فرديناندو ماجلان]]

--- a/Magalhãesi_Fernão.mw
+++ b/Magalhãesi_Fernão.mw
@@ -16,6 +16,7 @@
 [[Katõgooria:Portugali maiõuurjaq]]
 
 [[af:Ferdinand Magellaan]]
+[[ar:فرديناندو ماجلان]]
 [[an:Ferrando de Magallans]]
 [[ast:Fernão de Magalhães]]
 [[az:Fernan Magellan]]
