--- a/Ho_Chi_Minh.mw
+++ b/Ho_Chi_Minh.mw
@@ -1,7 +1,7 @@
 {{liin
 |  nimi =Ho Chi Minh
 |  umakeeline_nimi = Thành phố Hồ Chí Minh
-|  pilt = [[Pilt:HCMC skyline at night.jpg|250px]]
+|  pilt = 
 |  pildiallkiri = Ho Chi Minh
 |  riik = Vietnam
 |  suurus = 2095
