Add image from http://tools.wikimedia.de/~emijrp/imagesforbio/

--- a/Trumani_Harry.mw
+++ b/Trumani_Harry.mw
@@ -1,3 +1,4 @@
+[[Pilt:HarryTruman.jpg|thumb|right|Trumani Harry]]
 '''Trumani Harry''' ('''Harry S. Truman''', 1884–1972) oll' [[Ameeriga Ütisriigiq|Ameeriga Ütisriike]] poliitik. Tä oll' USA 34. asõpresident (1945) ja 33. president (aastagil 1945–1953). 
 
 [[Katõgooria:Ameeriga Ütisriike presidendiq]]
