*Empty MediaWiki Message*

--- a/Rubensi_Piitre_Paul.mw
+++ b/Rubensi_Piitre_Paul.mw
@@ -17,9 +17,9 @@
 == Pilte ==
 
 <gallery>
-Image:Rubens, Peter Paul - Flight into Egypt - 1614.jpg|'' jalgama'' (1614)
+Image:Rubens, Peter Paul - Flight into Egypt - 1614.jpg|'' Jalgama'' (1614)
 Image:Pope-peter pprubens.jpg| ''Püha Piitre''
-Image:Peter Paul Rubens 160.jpg| ''leinä'' (1614)
+Image:Peter Paul Rubens 160.jpg| ''Leinä'' (1614)
 </gallery>
 
 
