robot tävvendämine: [[mdf:Юпитерь (шары тяште)]]

--- a/Jupitõr_(hod'otäht).mw
+++ b/Jupitõr_(hod'otäht).mw
@@ -85,7 +85,7 @@
 [[mr:गुरू ग्रह]]
 [[arz:چوپيتر]]
 [[mwl:Júpiter (planeta)]]
-[[mdf:Юпитерь]]
+[[mdf:Юпитерь (шары тяште)]]
 [[mn:Бархасбадь]]
 [[my:ကြာသပတေးဂြိုဟ်]]
 [[nah:Huēyitzitzimicītlalli]]
