robot tävvendämine: [[ce:ГIасахий-Мохк]]

--- a/Kasastan.mw
+++ b/Kasastan.mw
@@ -143,7 +143,7 @@ Internetitunnus=[[.kz]]
 [[nah:Cazactlālpan]]
 [[nl:Kazachstan]]
 [[ja:カザフスタン]]
-[[ce:Казахстан]]
+[[ce:ГIасахий-Мохк]]
 [[no:Kasakhstan]]
 [[nn:Kasakhstan]]
 [[nov:Kasakstan]]
