--- a/Rubensi_Piitre_Paul.mw
+++ b/Rubensi_Piitre_Paul.mw
@@ -12,7 +12,7 @@
 <!--|matmispaik=Viru-Jaagupi kalmuaid-->
 }}
 
-'''Rubensi Piitre Paul''' (Peter Paul Rubens, 1577-1640) oll' hollandi baroque kunstnik.
+'''Rubensi Piitre Paul''' (Peter Paul Rubens, 1577-1640) oll'  flamandi baroque kunstnik.
 
 == Pilte ==
 
