--- a/Taani.mw
+++ b/Taani.mw
@@ -2,7 +2,7 @@
 Nimi=Kongeriget Danmark|
 Genitiiv=Taani|
 Lipp=Image:Flag of Denmark.svg|
-Vapp'=Image:COA_of_Denmark.svg|
+Vapp'=Image:National Coat of arms of Denmark.svg|
 Tunnuslausõq=Guds hjælp, Folkets kærlighed, Danmarks styrke|
 Kaart=Image:LocationDenmark.png|
 Riigikiil'=[[Taani kiil']]|
