robot manopandminõ: [[sh:Napoleonski ratovi]]

--- a/Napoleoni_sõaq.mw
+++ b/Napoleoni_sõaq.mw
@@ -44,6 +44,7 @@ Napoleoni sõaq lõppiq ku Napoleon sai 18. piimäkuu pääväl 1815 Waterloo al
 [[simple:Napoleonic Wars]]
 [[sk:Napoleonské vojny]]
 [[sr:Наполеонови ратови]]
+[[sh:Napoleonski ratovi]]
 [[fi:Napoleonin sodat]]
 [[sv:Napoleonkrigen]]
 [[th:สงครามนโปเลียน]]
