Add image from http://tools.wikimedia.de/~emijrp/imagesforbio/

--- a/Viciousõ_Sid.mw
+++ b/Viciousõ_Sid.mw
@@ -1,3 +1,4 @@
+[[Pilt:Sid Vicious.JPG|thumb|right|Viciousõ Sid]]
 '''Viciousõ Sid''' (Sid Vicious), [[inglüse]] [[punk]][[punkrock|rocki]] [[laulja]] (1957-1979).
 
 == Plaadiq ==
