*Empty MediaWiki Message*

--- a/Miikse.mw
+++ b/Miikse.mw
@@ -1,3 +1,3 @@
 Miikse om külä
-saal on vinne kerik, pühä um vanal jaanipääväl
-kerigu ehitiva mehee üüse staalini aigu
+sääl um vinne kerik, pühq umma vanal jaanipääväl. Kerig om põhitsetu püha Jürile
+kerigu ehitiva mehq üüse staalini aigu kohhki 1952, ma mõtlõ, jummal kaits nende sugulasi
