--- a/Miikse.mw
+++ b/Miikse.mw
@@ -1,3 +1,3 @@
 Miikse om külä
-sääl um vinne kerik, pühq umma vanal jaanipääväl. Kerig om põhitsetu püha Jürile
-kerigu ehitiva mehq üüse staalini aigu kohhki 1952, ma mõtlõ, jummal kaits nende sugulasi
+sääl um vinne kerik, pühq umma vanal jaanipääväl. Kerig om põhitsetu ristija johanneselle
+kerigu ehitiva mehq üüse staalini aigu kohhki 1953, ma mõtlõ, jummal kaits nende sugulasi
