*Empty MediaWiki Message*

--- a/Miikse.mw
+++ b/Miikse.mw
@@ -1,4 +1,5 @@
 Miikse om külä
 sääl um vinne kerik, pühq umma vanal jaanipääväl. Kerig om põhitsetu ristija johanneselle
 kerigu ehitiva mehq üüse staalini aigu kohhki 1953, ma mõtlõ, jummal kaits nende sugulasi
-[[Pilt:Näüdüs.jpg]]
+[http://www.Pilt:Näüdüs.jpg]
+[http://www.example.com Lingi nimi]
