--- a/Miikse.mw
+++ b/Miikse.mw
@@ -1,5 +1,6 @@
 Miikse om külä
 sääl um vinne kerik, pühq umma vanal jaanipääväl. Kerig om põhitsetu ristija johanneselle
-kerigu ehitiva mehq üüse staalini aigu kohhki 1953, ma mõtlõ, jummal kaits nende sugulasi
-[http://www.Pilt:Näüdüs.jpg]
-[http://www.example.com Lingi nimi]
+kerigu ehitiva mehq üüse staalini aigu 1953, jummal kaits inemisi
+[http://www.Pilt:Näüdüs.jpg
+]
+[[Pilt:Näüdüs.jpg]]
