robot tävvendämine: [[be-x-old:Гвінэя]]

--- a/Guinea.mw
+++ b/Guinea.mw
@@ -53,7 +53,7 @@ Internetitunnus=[[.gn]]
 [[zh-min-nan:Guinée]]
 [[jv:Guinea]]
 [[be:Гвінея]]
-[[be-x-old:Ґвінэя]]
+[[be-x-old:Гвінэя]]
 [[bcl:Guineya]]
 [[bo:གི་ནེ།]]
 [[bs:Gvineja]]
