Correct coat of arms

--- a/Tsiili.mw
+++ b/Tsiili.mw
@@ -2,7 +2,7 @@
 Nimi=República de Chile|
 Genitiiv=Tsiili|
 Lipp=Image:Flag of Chile.svg|
-Vapp'=Image:Coat of arms of Chile-(Non-3D).svg|
+Vapp'=Image:Coat of arms of Chile.svg|
 Tunnuslausõq=Por la razón o la fuerza|
 Kaart=Image:LocationChile.png|
 Riigikiil'=[[hispaania kiil']]|
