robot tävvendämine: [[mr:लेख वावेंसा]], [[simple:Lech Wałęsa]]

--- a/Wałęsa_Lech.mw
+++ b/Wałęsa_Lech.mw
@@ -75,7 +75,7 @@
 [[lij:Lech Wałęsa]]
 [[hu:Lech Wałęsa]]
 [[mk:Лех Валенса]]
-[[mr:लेक वालेंसा]]
+[[mr:लेख वावेंसा]]
 [[arz:ليخ فاوينسا]]
 [[mdf:Валенса, Лех]]
 [[nl:Lech Wałęsa]]
@@ -102,7 +102,7 @@
 [[stq:Lech Wałęsa]]
 [[sq:Leh Valesa]]
 [[scn:Lech Wałęsa]]
-[[simple:Lech Walesa]]
+[[simple:Lech Wałęsa]]
 [[sk:Lech Wałęsa]]
 [[sl:Lech Wałęsa]]
 [[cu:Ль́хъ Валѧ́са]]
