robot tävvendämine: [[ar:نيكاراجوا]]

--- a/Nicaragua.mw
+++ b/Nicaragua.mw
@@ -39,7 +39,7 @@ Internetitunnus=[[.ni]]
 [[ace:Nikaragua]]
 [[af:Nicaragua]]
 [[am:ኒካራጓ]]
-[[ar:نيكاراغوا]]
+[[ar:نيكاراجوا]]
 [[an:Nicaragua]]
 [[frp:Nicaragoa]]
 [[ast:Nicaragua]]
