*Empty MediaWiki Message*

--- a/Miikse.mw
+++ b/Miikse.mw
@@ -1,6 +1,3 @@
-Miikse om külä
-sääl um vinne kerik, pühq umma vanal jaanipääväl. Kerig om põhitsetu ristija johanneselle
-kerigu ehitiva mehq üüse staalini aigu 1953, jummal kaits inemisi
-[http://www.Pilt:Näüdüs.jpg
-]
-[[Pilt:Näüdüs.jpg]]
+'''Miikse''' om külä. 
+Sääl om vinne kerik, pühiq ommaq vanal jaanipääväl. Kerik om pühitset ristjä Johannõsõlõ. 
+Kerigu ehitiväq meheq üüse [[Stalin]]i aigu 1953, jummal kaits inemiisi.
