--- a/Singapur.mw
+++ b/Singapur.mw
@@ -41,7 +41,7 @@ Internetitunnus=[[.sg]]
 [[af:Singapoer]]
 [[als:Singapur]]
 [[am:ሲንጋፖር]]
-[[ar:سنغافورة]]
+[[ar:سنغافورا]]
 [[an:Singapur]]
 [[frp:Singapor]]
 [[ast:Singapur]]
