--- a/Cortési_Hernán.mw
+++ b/Cortési_Hernán.mw
@@ -1,5 +1,5 @@
 {{Elokäük
-|pilt=Cortes-Hernando-LOC.jpg
+|pilt=Cortes-Hernan-LOC.jpg
 |pildiallkiri=Cortési Hernán 
 |nimi=Cortési Hernán
 |umakeeline_nimi=Hernán Cortés de Monroy y Pizarro
