*Empty MediaWiki Message*

--- a/Kasv.mw
+++ b/Kasv.mw
@@ -6,6 +6,14 @@ Kasvõ hulga kuulussõq näütüses [[puu]]q, [[puhm]]oq, [[hain]]aq ja [[sambla
 
 Kasvõ uur elotiidüse haro, midä kutsutas [[kasvotiidüs]]es vai botaanigas.
 
+== Album ==
+<center><gallery widths="180px" heights="120px" perrow="3">
+File:Borassus flabellifer.jpg|[[Borassus flabellifer]]
+File:GntTaatiFruit.jpg|The fruits of Palmyra Palm tree, [[Borassus flabellifer]] (locally called Thaati Munjelu) sold in a market at Guntur, India.
+File:Turmericroot.jpg|Turmeric rhizome
+[...]
+</gallery></center>
+
 [[Katõgooria:Kasvoq]]
 
 [[af:Plant]]
