robot manopandminõ: [[eml:Avtûn]]

--- a/Süküs.mw
+++ b/Süküs.mw
@@ -32,6 +32,7 @@ Egäpäävätsen elon loetas süküskuis põh'apuulkeräl [[süküskuu]]d, [[leh
 [[de:Herbst]]
 [[et:Sügis]]
 [[el:Φθινόπωρο]]
+[[eml:Avtûn]]
 [[en:Autumn]]
 [[myv:Сёксь]]
 [[es:Otoño]]
