--- a/Krokodill.mw
+++ b/Krokodill.mw
@@ -1,3 +1,3 @@
-'''Krokodill''' om ''elläi'', kiä eläs lämmäl maal, nt [[Ahvriga|Ahvrikan]].
+'''Krokodill''' om ''elläi'', kiä eläs lämmäl maal, nt [[Afriga|Afrikan]].
 
 [[katõgooria:eläjäq]]
