--- a/Lenini_Vladimir.mw
+++ b/Lenini_Vladimir.mw
@@ -33,3 +33,5 @@ Lenini Vladimir kuuli 1924. a. vahtsõaastakuun, tä iho balsameeriti ärq ja om
 Kommunistõlõ om Lenini Vladimir iidol seo ilma aoni.
 
 [[Katõgooria:Vinnemaa poliitiguq]]
+
+{{Link FA|gl}}
