/* Kes võib osaleda? */

--- a/Wikipedia:Artiklivõistlus_(2013)_est.mw
+++ b/Wikipedia:Artiklivõistlus_(2013)_est.mw
@@ -3,7 +3,7 @@
 Võistlus toimub 2013. aastal 2. maist kuni 2. juunini. Liituda võib igal ajal selles vahemikus. 
 
 ==Kes võib osaleda?==
-Osaleda võib igaüks (peale žürii liikmete), kes mõistab [[et:võru keel|võru keeles]] kirjutada. Soovi ja oskuse korral võib kirjutada ka teistes [[et:lõunaeesti keel|lõunaeesti keeltes]]: [[et:setu keel|setu]], [[et:mulgi keel|mulgi]] või [[et:tartu keel|tartu keeles]]; ka need artiklid on väga oodatud.
+Osaleda võib igaüks (peale žürii liikmete), kes mõistab [[et:võru keel|võru keeles]] kirjutada. Soovi ja oskuse korral võib kirjutada ka teistes [[:et:lõunaeesti keel|lõunaeesti keeltes]]: [[et:setu keel|setu]], [[et:mulgi keel|mulgi]] või [[et:tartu keel|tartu keeles]]; ka need artiklid on väga oodatud.
 
 Osalemiseks tuleb ennast kõigepealt Vikipeediä [kasutajaks registreerida]. Kindlasti pane registreerumisel kirja ka oma e-postiaadress.
 
