--- a/Wikipedia:Artiklivõistlus_(2013)_est.mw
+++ b/Wikipedia:Artiklivõistlus_(2013)_est.mw
@@ -8,7 +8,7 @@ Osaleda võib igaüks (peale žürii liikmete), kes mõistab [[et:võru keel|võ
 Osalemiseks tuleb ennast kõigepealt Vikipeediä [kasutajaks registreerida]. Kindlasti pane registreerumisel kirja ka oma e-postiaadress.
 
 ==Millest kirjutada?==
-Kirjutada võib kõigest, mis on piisavalt oluline, et sellest peaks omakeelses entsüklopeedias artikkel olema. Sobivad tuntud inimesed, üritused, organisatsioonid, geograafilised paigad, looma- ja taimeliigid, ajaloosündmused, erinevate teaduste mõisted, jne jne. Teema võib olla seotud [[Võromaa|Võrumaa]] võru kultuuriga, aga ei pea, ka muudest olulistest maailma asjadest võib kirjutada. Kui endal kohe head mõtet ei tule, siis [siin nimekirjas] on mõned teemad, mille kohta artiklit veel ei ole, aga võiks olla.
+Kirjutada võib kõigest, mis on piisavalt oluline, et sellest peaks omakeelses entsüklopeedias artikkel olema. Sobivad tuntud inimesed, üritused, organisatsioonid, geograafilised paigad, looma- ja taimeliigid, ajaloosündmused, erinevate teaduste mõisted, jne jne. Teema võib olla seotud [[Võromaa|Võrumaa]] ja võru kultuuriga, aga ei pea, ka muudest olulistest maailma asjadest võib kirjutada. Kui endal kohe head mõtet ei tule, siis [siin nimekirjas] on mõned teemad, mille kohta artiklit veel ei ole, aga võiks olla.
 
 ==Kuidas kirjutada?==
 Uue artikli alustamiseks vajuta teemade nimekirjas soovitud pealkirjaga punasele lingile. Või kirjuta pealkiri otsingukasti ja otsingutulemuste lehelt leiad punase lingi. Võid valida ka juba olemasoleva lühikese artikli ja seda täiendada. Vaata [[Wikipedia:Lühkü pruukmisoppus|pruukmisoppust]].
