--- a/Wikipedia:Artiklivõistlus_(2013)_est.mw
+++ b/Wikipedia:Artiklivõistlus_(2013)_est.mw
@@ -11,7 +11,7 @@ Osalemiseks tuleb ennast kõigepealt Vikipeediä [kasutajaks registreerida]. Kin
 Kirjutada võib kõigest, mis on piisavalt oluline, et sellest peaks omakeelses entsüklopeedias artikkel olema. Sobivad tuntud inimesed, üritused, organisatsioonid, geograafilised paigad, looma- ja taimeliigid, ajaloosündmused, erinevate teaduste mõisted, jne jne. Teema võib olla seotud [[Võromaa|Võrumaa]] ja võru kultuuriga, aga ei pea, ka muudest olulistest maailma asjadest võib kirjutada. Kui endal kohe head mõtet ei tule, siis [siin nimekirjas] on mõned teemad, mille kohta artiklit veel ei ole, aga võiks olla.
 
 ==Kuidas kirjutada?==
-Uue artikli alustamiseks vajuta teemade nimekirjas soovitud pealkirjaga punasele lingile. Või kirjuta pealkiri otsingukasti ja otsingutulemuste lehelt leiad punase lingi. Võid valida ka juba olemasoleva lühikese artikli ja seda täiendada. Vaata [[Wikipedia:Lühkü pruukmisoppus|pruukmisoppust]].
+Uue artikli alustamiseks vajuta teemade nimekirjas soovitud pealkirjaga punasele lingile. Või kirjuta uue artikli pealkiri pealehel olevasse spetsiaalsesse uue artikli loomise kasti ja vajuta nuppu ''Luuq vahtsõnõ artikli!''. Võid valida ka juba olemasoleva lühikese artikli ja seda täiendada. Vaata [[Wikipedia:Lühkü pruukmisoppus|pruukmisoppust]].
 
 Vaja oleks, et paneksid artiklisse kirja ka allika, kust kirjutamiseks materjali leidsid, siis on artikkel usaldusväärsem ja lugeja saab selle õigsust allikast kontrollida. Kuid raamatust, internetist või mujalt päris maha kirjutada ei tohi, see oleks teiste autorite loomingu vargus.
 
