--- a/Wikipedia:Artiklivõistlus_(2013)_est.mw
+++ b/Wikipedia:Artiklivõistlus_(2013)_est.mw
@@ -17,7 +17,7 @@ Vaja oleks, et paneksid artiklisse kirja ka allika, kust kirjutamiseks materjali
 
 Kui tahad teada, milline üks Vikipeediä artikkel peaks välja nägema, vaata näiteks artikleid [[ ]] ja [[ ]].
 
-Kui oled artikli valmis saanud, lisa selle link [Osalevate artiklite leheküljele], siis saab žürii aru, et oled võistlusel osaleja. Igaüks võib võistlusele esitada nii palju artikleid kui soovib.
+Kui oled artikli valmis saanud, lisa selle link [[Artiklivõistlusõst osavõtjaq artikliq (2013)|Osalevate artiklite leheküljele]], siis saab žürii aru, et oled võistlusel osaleja. Igaüks võib võistlusele esitada nii palju artikleid kui soovib.
 
 ==Kes võistlust korraldab ja kes žüriis on?==
 Võistlust korraldab MTÜ Wikimedia Eesti.
