*Empty MediaWiki Message*

--- a/Wikipedia:Artiklivõistlusõst_osavõtjaq_artikliq_(2013).mw
+++ b/Wikipedia:Artiklivõistlusõst_osavõtjaq_artikliq_(2013).mw
@@ -7,4 +7,4 @@ Siin nimekirän ommaq võrokeelidse Vikipeediä 2013. aastaga artiklivõistlusõ
 * ...
 
 
-[[katõgooria:wikipedia]]
+[[katõgooria:Vikipeediä]]
