/* Kes võistlust korraldab ja kes žüriis on? */

--- a/Wikipedia:Artiklivõistlus_(2013)_est.mw
+++ b/Wikipedia:Artiklivõistlus_(2013)_est.mw
@@ -22,7 +22,7 @@ Kui oled artikli valmis saanud, lisa selle link [[Wikipedia:Artiklivõistlusõst
 ==Kes võistlust korraldab ja kes žüriis on?==
 Võistlust korraldab MTÜ Wikimedia Eesti.
 
-Žüriis on Valdis Laan, Triin Iva ja Tiia Allas.
+Žüriis on [[pruukja:Valdis|Valdis Laan]], Triin Iva ja Tiia Allas.
 
 ==Mis auhinnaks on?==
 Parimatele kirjutajatele on auhindadeks ..., raamatud Võru Instituudilt, ...
