/* Mis auhinnaks on? */

--- a/Wikipedia:Artiklivõistlus_(2013)_est.mw
+++ b/Wikipedia:Artiklivõistlus_(2013)_est.mw
@@ -25,9 +25,9 @@ Võistlust korraldab MTÜ Wikimedia Eesti.
 Žüriis on [[pruukja:Valdis|Valdis Laan]], Triin Iva ja Tiia Allas.
 
 ==Mis auhinnaks on?==
-Parimatele kirjutajatele on auhindadeks ..., raamatud Võru Instituudilt, ...
+Parimatele kirjutajatele on välja pannud auhinnad [[Võro Instituut|Võru Instituut]].
 
-Võitjad kuulutatakse välja ja auhinnad antakse kätte 12. juunil.
+Võitjad kuulutatakse välja ja auhinnad antakse kätte 12. juunil [[Tarto Ülikooli Lõunõ-Eesti keele- ja kultuuriuurmiisi keskus|Tartu Ülikooli Lõuna-Eesti keele- ja kultuuriuuringute keskuses]].
 
 ==Kust saab nõu?==
 Vaata [[Wikipedia:Lühkü pruukmisoppus|pruukmisoppust]].
