/* Mis auhinnaks on? */

--- a/Wikipedia:Artiklivõistlus_(2013)_est.mw
+++ b/Wikipedia:Artiklivõistlus_(2013)_est.mw
@@ -27,7 +27,7 @@ Võistlust korraldab MTÜ Wikimedia Eesti.
 ==Mis auhinnaks on?==
 Parimatele kirjutajatele on välja pannud auhinnad [[Võro Instituut|Võru Instituut]].
 
-Võitjad kuulutatakse välja ja auhinnad antakse kätte 12. juunil [[Tarto Ülikooli Lõuna-Eesti keele- ja kultuuriuurmiisi keskus|Tartu Ülikooli Lõuna-Eesti keele- ja kultuuriuuringute keskuses]].
+Võitjad kuulutatakse välja ja auhinnad antakse kätte 12. juunil [[Lõunõ-Eesti keele- ja kultuuriuurmiisi keskus|Tartu Ülikooli Lõuna-Eesti keele- ja kultuuriuuringute keskuses]].
 
 ==Kust saab nõu?==
 Vaata [[Wikipedia:Lühkü pruukmisoppus|pruukmisoppust]].
