*Empty MediaWiki Message*

--- a/Wikipedia:Artiklivõistlus_(2013)_est.mw
+++ b/Wikipedia:Artiklivõistlus_(2013)_est.mw
@@ -33,3 +33,5 @@ Võitjad kuulutatakse välja ja auhinnad antakse kätte 12. juunil [[Lõunõ-Ees
 Vaata [[Wikipedia:Lühkü pruukmisoppus|pruukmisoppust]].
 
 Küsimusi võid kirjutada selle lehekülje [arutelusse] või saata e-postiga sulev.iva [ät] ut.ee.
+
+[[katõgooria:Wikipedia]]
