*Empty MediaWiki Message*

--- a/Wikipedia:Artiklivõistlus_(2013)_est.mw
+++ b/Wikipedia:Artiklivõistlus_(2013)_est.mw
@@ -34,4 +34,4 @@ Vaata [[Wikipedia:Lühkü pruukmisoppus|pruukmisoppust]].
 
 Küsimusi võid kirjutada selle lehekülje [arutelusse] või saata e-postiga sulev.iva [ät] ut.ee.
 
-[[katõgooria:Wikipedia]]
+[[katõgooria:Vikipeediä]]
