/* Lasitsist tõisi maiõ mütoloogian */

--- a/Lasits.mw
+++ b/Lasits.mw
@@ -65,6 +65,6 @@ Inuiidi mütoloogian peetäs lasitsat väega targas ja julgõs. Ku müütilidsel
 
 Lõunõ-Kreekan usuti, et lasits oll' inne olnuq mõrsja, kiä muudõti eläjäs, kiä kadõhusõ peräst' naas' lahkma tõisi mõrsjidõ kleite. 
  
-[[Katõgooria:Mõtseläjäq]]
+[[Katõgooria:Mõtsaeläjäq]]
 
 [[ang:Ƿesle]]
