--- a/Wikipedia:Artiklivõistlus_(2013)_est.mw
+++ b/Wikipedia:Artiklivõistlus_(2013)_est.mw
@@ -15,7 +15,7 @@ Uue artikli alustamiseks vajuta teemade nimekirjas (või mõnes artiklis) soovit
 
 Vaja oleks, et paneksid artiklisse kirja ka allika, kust kirjutamiseks materjali leidsid, siis on artikkel usaldusväärsem ja lugeja saab selle õigsust allikast kontrollida. Kuid raamatust, internetist või mujalt päris maha kirjutada ei tohi, see oleks teiste autorite loomingu vargus.
 
-Kui tahad teada, milline üks Vikipeediä artikkel peaks välja nägema, loe ja uuri juba kirjutatud artikleid, näiteks (lühematest) [[Võro lipp]], [[Matõmaatiga]], [[Kikkasiin]], (pikematest) [[Hurda Jakob]], [[Iraan]] või [[Lasits]].
+Kui tahad teada, milline üks Vikipeediä artikkel peaks välja nägema, loe ja uuri erinevaid juba kirjutatud artikleid, näiteks (lühematest) [[Võro lipp]], [[Matõmaatiga]], [[Kikkasiin]], (pikematest) [[Hurda Jakob]], [[Iraan]] või [[Lasits]].
 
 Kui oled artikli valmis saanud, lisa selle link [[Wikipedia:Artiklivõistlusõst osavõtjaq artikliq (2013)|Osalevate artiklite leheküljele]], siis saab žürii aru, et oled võistlusel osaleja. Igaüks võib võistlusele esitada nii palju artikleid kui soovib.
 
