--- a/Wikipedia:Artiklivõistlus_(2013)_est.mw
+++ b/Wikipedia:Artiklivõistlus_(2013)_est.mw
@@ -1,3 +1,5 @@
+[[Võro keelen|Wikipedia:Artiklivõistlus (2013) vro]]
+
 '''Artiklivõistlus''' toimub 2013. aastal võru Vikipeediäs esimest korda. Selle eesmärk on saada Vikipeediäle juurde nii artikleid kui ka kirjutajaid. Võistlus on hea võimalus omakeelset vaba veebientsüklopeediat võrukestele tutvustada ja kutsuda neid kaasa lööma, sest Vikipeediät saab igaüks täiendada. 
 
 Võistlus toimub 2013. aastal 2. maist kuni 2. juunini. Liituda võib igal ajal selles vahemikus. 
