*Empty MediaWiki Message*

--- a/Wikipedia:Artiklivõistlus_(2013)_vro.mw
+++ b/Wikipedia:Artiklivõistlus_(2013)_vro.mw
@@ -1,4 +1,4 @@
-[[Wikipedia:Artiklivõistlus (2013) est|Seo leht eesti keelen]]
+[[Wikipedia:Artiklivõistlus (2013) est|Eesti keeles]]
 
 '''Artiklivõistlust''' peetäs 2013. aastagal võro Vikipeediän edimäist kõrda. Taaga tahetas saiaq Vikipeediäle mano nii artikliid ku ka kirotajit. Võistlus om hää võimalus võrokeelist vapa võrgoentsüklopeediät inemiisile tutvustaq ja kutsuq näid üten lüümä - Vikipeediät saa jo egäüts esiq tävvendäq. 
 
