--- a/Wikipedia:Artiklivõistlus_(2013)_est.mw
+++ b/Wikipedia:Artiklivõistlus_(2013)_est.mw
@@ -1,4 +1,7 @@
-[[Wikipedia:Artiklivõistlus (2013) vro|Võro keelen]]
+{{Nowrap|[[file:Flag of Estonia.svg|border|25px]] [[Wikipedia:Artiklivõistlus (2013) est|Eesti keelen]]}}
+{{Nowrap|[[Pilt:Võrokõisi_lipp.png|border|25px]] [[Wikipedia:Artiklivõistlus (2013) vro|Võro keelen]]}}
+
+
 
 '''Artiklivõistlus''' toimub 2013. aastal võru Vikipeediäs esimest korda. Selle eesmärk on saada Vikipeediäle juurde nii artikleid kui ka kirjutajaid. Võistlus on hea võimalus omakeelset vaba veebientsüklopeediat võrukestele tutvustada ja kutsuda neid kaasa lööma, sest Vikipeediät saab igaüks täiendada. 
 
