*Empty MediaWiki Message*

--- a/Wikipedia:Artiklivõistlus_(2013)_est.mw
+++ b/Wikipedia:Artiklivõistlus_(2013)_est.mw
@@ -3,7 +3,8 @@
 
 
 
-'''Artiklivõistlus''' toimub 2013. aastal võru Vikipeediäs esimest korda. Selle eesmärk on saada Vikipeediäle juurde nii artikleid kui ka kirjutajaid. Võistlus on hea võimalus võrukeelset vaba veebientsüklopeediat inimestele tutvustada ja kutsuda neid kaasa lööma, sest Vikipeediät saab igaüks täiendada. 
+'''Artiklivõistlus''' toimub 2013. aastal võru Vikipeediäs esimest korda. Selle eesmärk on saada Vikipeediäle juurde nii artikleid kui ka kirjutajaid. 
+Võistlus on hea võimalus võrukeelset vaba veebientsüklopeediat inimestele tutvustada ja kutsuda neid kaasa lööma, sest Vikipeediät saab igaüks täiendada. 
 
 Võistlus toimub 2013. aastal 2. maist kuni 2. juunini. Liituda võib igal ajal selles vahemikus. 
 
