--- a/Wikipedia:Artiklivõistlus_(2013)_vro.mw
+++ b/Wikipedia:Artiklivõistlus_(2013)_vro.mw
@@ -3,7 +3,9 @@
 
 
 
-'''Artiklivõistlust''' peetäs 2013. aastagal võro Vikipeediän edimäist kõrda. Taaga tahetas saiaq Vikipeediäle mano nii artikliid ku ka kirotajit. Võistlus om hää võimalus võrokeelist vapa võrgoentsüklopeediät inemiisile tutvustaq ja kutsuq näid üten lüümä - Vikipeediät saa jo egäüts esiq tävvendäq. 
+'''Artiklivõistlust''' peetäs 2013. aastagal võro Vikipeediän edimäist kõrda. Taaga tahetas saiaq Vikipeediäle mano nii artikliid ku ka kirotajit. 
+
+Võistlus om hää võimalus võrokeelist vapa võrgoentsüklopeediät inemiisile tutvustaq ja kutsuq näid üten lüümä - Vikipeediät saa jo egäüts esiq tävvendäq. 
 
 Võistlus toimub 2013. aastal 2. maist kuni 2. juunini. Liituda võib igal ajal selles vahemikus. 
 
