*Empty MediaWiki Message*

--- a/Wikipedia:Artiklivõistlus_(2013)_vro.mw
+++ b/Wikipedia:Artiklivõistlus_(2013)_vro.mw
@@ -7,7 +7,7 @@
 
 Võistlus om hää võimalus võrokeelist vapa võrgoentsüklopeediät inemiisile tutvustaq ja kutsuq näid üten lüümä - Vikipeediät saa jo egäüts esiq tävvendäq. 
 
-Võistlus toimub 2013. aastal 2. maist kuni 2. juunini. Liituda võib igal ajal selles vahemikus. 
+Võistlust peetäs 2013. aastal 2. lehekuu pääväst (maist) kooniq 2. piimäkuu pääväni (juunini). Võistlõma või tullaq egäl aol tuu vaihõ seen. 
 
 ==Kes võib osaleda?==
 Osaleda võib igaüks (peale žürii liikmete), kes mõistab [[võro kiil|võru keeles]] kirjutada. Soovi ja oskuse korral võib kirjutada ka teistes [[lõunõeesti kiil|lõunaeesti keeltes]]: [[seto kiil|seto]], [[mulgi kiil|mulgi]] või [[tarto kiil|tartu keeles]]; ka need artiklid on väga oodatud.
